// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All Component Properties Render [DISTRIBUTION] 1`] = `
<JSONInput
  colors={
    Object {
      "string": "#DAA520",
    }
  }
  confirmGood={true}
  height="500px"
  id="unique_string"
  locale={
    Object {
      "brace": Object {
        "curly": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '{}' curly braces",
          "missingClose": "Open '{' curly brace is missing closing '}' curly brace",
          "missingOpen": "Missing '{' open curly brace",
        },
        "square": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '[]' square braces",
          "missingClose": "Open '[' square brace is missing closing ']' square brace",
          "missingOpen": "Missing '[' open square brace",
        },
      },
      "format": "{reason} at line {line}",
      "invalidToken": Object {
        "double": "'{token}' token cannot be followed by another '{token}' token",
        "sequence": "'{firstToken}' token cannot be followed by a '{secondToken}' token",
        "unexpected": "Unexpected '{token}' token found",
        "useInstead": "'{badToken}' token is not accepted. Use '{goodToken}' instead",
        "whitelist": "'{firstToken}' token can only follow '{secondToken}' token",
      },
      "key": Object {
        "numberAndLetterMissingQuotes": "Key beginning with number and containing letters must be wrapped by quotes",
        "spaceMissingQuotes": "Key containing space must be wrapped by quotes",
        "unexpectedString": "Unexpected string found at key position",
      },
      "noTrailingOrLeadingComma": "Trailing or leading commas in arrays and objects are not permitted",
      "string": Object {
        "missingClose": "Missing/invalid closing string '{quote}' token",
        "missingOpen": "Missing/invalid opening string '{quote}' token",
        "mustBeWrappedByQuotes": "Strings must be wrapped by quotes",
        "nonAlphanumeric": "Non-alphanemeric token '{token}' is not allowed outside string notation",
        "unexpectedKey": "Unexpected key found at string position",
      },
    }
  }
  modifyErrorText={[Function]}
  onChange={[Function]}
  onKeyPressUpdate={false}
  placeholder={
    Object {
      "foo": "bar",
      "hello": "world",
    }
  }
  style={
    Object {
      "contentBox": Object {
        "pointerEvents": "none",
      },
      "labelColumn": Object {
        "display": "hidden",
      },
    }
  }
  test={true}
  theme="light_mitsuketa_tribute"
  viewOnly={false}
  waitAfterKeyPress={600}
  width="100%"
>
  <div
    id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-outer-box"
    name="outer-box"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "height": "500px",
        "margin": 0,
        "overflow": "none",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "height": "30px",
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": "translate(-25%,25%)",
          "transitionDuration": "0.2s",
          "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
          "width": "30px",
        }
      }
    >
      <svg
        height="30px"
        viewBox="0 0 100 100"
        width="30px"
      >
        <path
          clipRule="evenodd"
          d="M39.363,79L16,55.49l11.347-11.419L39.694,56.49L72.983,23L84,34.085L39.363,79z"
          fill="green"
          fillRule="evenodd"
          opacity="0.85"
        />
      </svg>
    </div>
    <div
      id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-container"
      name="container"
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "display": "block",
          "fontFamily": "Roboto, sans-serif",
          "height": "500px",
          "margin": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-warning-box"
        name="warning-box"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#FEECEB",
            "display": "block",
            "height": "0px",
            "margin": 0,
            "overflow": "hidden",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "100%",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "verticalAlign": "top",
              "width": "60px",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "height": "60px",
                "left": 0,
                "margin": 0,
                "pointerEvents": "none",
                "position": "relative",
                "top": 0,
                "width": "60px",
              }
            }
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "left": "50%",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                }
              }
            >
              <svg
                height="25px"
                viewBox="0 0 100 100"
                width="25px"
              >
                <path
                  clipRule="evenodd"
                  d="M73.9,5.75c0.467-0.467,1.067-0.7,1.8-0.7c0.7,0,1.283,0.233,1.75,0.7l16.8,16.8  c0.467,0.5,0.7,1.084,0.7,1.75c0,0.733-0.233,1.334-0.7,1.801L70.35,50l23.9,23.95c0.5,0.467,0.75,1.066,0.75,1.8  c0,0.667-0.25,1.25-0.75,1.75l-16.8,16.75c-0.534,0.467-1.117,0.7-1.75,0.7s-1.233-0.233-1.8-0.7L50,70.351L26.1,94.25  c-0.567,0.467-1.167,0.7-1.8,0.7c-0.667,0-1.283-0.233-1.85-0.7L5.75,77.5C5.25,77,5,76.417,5,75.75c0-0.733,0.25-1.333,0.75-1.8  L29.65,50L5.75,26.101C5.25,25.667,5,25.066,5,24.3c0-0.666,0.25-1.25,0.75-1.75l16.8-16.8c0.467-0.467,1.05-0.7,1.75-0.7  c0.733,0,1.333,0.233,1.8,0.7L50,29.65L73.9,5.75z"
                  fill="red"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "position": "absolute",
              "verticalAlign": "top",
              "width": "calc(100% - 60px)",
            }
          }
        />
      </div>
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-body"
        name="body"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#FCFDFD",
            "display": "flex",
            "fontFamily": "Roboto Mono, Monaco, monospace",
            "fontSize": "11px",
            "height": "100%",
            "margin": 0,
            "overflow": "none",
            "resize": "none",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "",
          }
        }
      >
        <span
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-labels"
          name="labels"
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "hidden",
              "height": "100%",
              "margin": 0,
              "overflow": "hidden",
              "padding": "5px 0px 5px 10px",
              "verticalAlign": "top",
              "width": "44px",
            }
          }
        >
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-1"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-1"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            1
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-2"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-2"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            2
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-3"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-3"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            3
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-4"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-4"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            4
          </div>
        </span>
        <span
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-0-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-0-rc-2\\" type=\\"symbol\\" value=\\"{\\" depth=\\"1\\" style=\\"color:#D4D4D4\\">{</span><br>&nbsp;&nbsp;<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-1-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-1-rc-2\\" type=\\"key\\" value=\\"hello\\" depth=\\"1\\" style=\\"color:#59A5D8\\">hello</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-2-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-2-rc-2\\" type=\\"symbol\\" value=\\":\\" depth=\\"1\\" style=\\"color:#49B8F7\\">:</span> <span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-3-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-3-rc-2\\" type=\\"string\\" value=\\"'world'\\" depth=\\"1\\" style=\\"color:#DAA520\\">'world'</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-4-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-4-rc-2\\" type=\\"symbol\\" value=\\",\\" depth=\\"1\\" style=\\"color:#D4D4D4\\">,</span><br>&nbsp;&nbsp;<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-5-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-5-rc-2\\" type=\\"key\\" value=\\"foo\\" depth=\\"1\\" style=\\"color:#59A5D8\\">foo</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-6-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-6-rc-2\\" type=\\"symbol\\" value=\\":\\" depth=\\"1\\" style=\\"color:#49B8F7\\">:</span> <span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-7-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-7-rc-2\\" type=\\"string\\" value=\\"'bar'\\" depth=\\"1\\" style=\\"color:#DAA520\\">'bar'</span><br><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-8-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-8-rc-2\\" type=\\"symbol\\" value=\\"}\\" depth=\\"0\\" style=\\"color:#D4D4D4\\">}</span>",
            }
          }
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-content-box"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          onScroll={[Function]}
          spellCheck={false}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "flex": 1,
              "height": "100%",
              "margin": 0,
              "outline": "none",
              "overflowX": "hidden",
              "overflowY": "auto",
              "padding": "5px",
              "pointerEvents": "none",
              "verticalAlign": "top",
              "whiteSpace": "pre-line",
              "width": "",
              "wordWrap": "break-word",
            }
          }
        />
      </div>
    </div>
  </div>
</JSONInput>
`;

exports[`All Component Properties Render [SOURCE] 1`] = `
<JSONInput
  colors={
    Object {
      "string": "#E25E29",
    }
  }
  confirmGood={false}
  height="500px"
  id="unique_string"
  locale={
    Object {
      "brace": Object {
        "curly": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '{}' curly braces",
          "missingClose": "Open '{' curly brace is missing closing '}' curly brace",
          "missingOpen": "Missing '{' open curly brace",
        },
        "square": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '[]' square braces",
          "missingClose": "Open '[' square brace is missing closing ']' square brace",
          "missingOpen": "Missing '[' open square brace",
        },
      },
      "format": "{reason} at line {line}",
      "invalidToken": Object {
        "double": "'{token}' token cannot be followed by another '{token}' token",
        "sequence": "'{firstToken}' token cannot be followed by a '{secondToken}' token",
        "unexpected": "Unexpected '{token}' token found",
        "useInstead": "'{badToken}' token is not accepted. Use '{goodToken}' instead",
        "whitelist": "'{firstToken}' token can only follow '{secondToken}' token",
      },
      "key": Object {
        "numberAndLetterMissingQuotes": "Key beginning with number and containing letters must be wrapped by quotes",
        "spaceMissingQuotes": "Key containing space must be wrapped by quotes",
        "unexpectedString": "Unexpected string found at key position",
      },
      "noTrailingOrLeadingComma": "Trailing or leading commas in arrays and objects are not permitted",
      "string": Object {
        "missingClose": "Missing/invalid closing string '{quote}' token",
        "missingOpen": "Missing/invalid opening string '{quote}' token",
        "mustBeWrappedByQuotes": "Strings must be wrapped by quotes",
        "nonAlphanumeric": "Non-alphanemeric token '{token}' is not allowed outside string notation",
        "unexpectedKey": "Unexpected key found at string position",
      },
    }
  }
  modifyErrorText={[Function]}
  onChange={[Function]}
  onKeyPressUpdate={true}
  placeholder={
    Object {
      "foo": "bar",
      "hello": "world",
    }
  }
  style={
    Object {
      "container": Object {
        "backgroundColor": "",
      },
      "outerBox": Object {
        "border": "5px solid grey",
      },
    }
  }
  test={true}
  theme="dark_vscode_tribute"
  viewOnly={true}
  waitAfterKeyPress={1200}
  width="100%"
>
  <div
    id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-outer-box"
    name="outer-box"
    style={
      Object {
        "border": "5px solid grey",
        "boxSizing": "border-box",
        "display": "block",
        "height": "500px",
        "margin": 0,
        "overflow": "none",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-container"
      name="container"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "",
          "boxSizing": "border-box",
          "display": "block",
          "fontFamily": "Roboto, sans-serif",
          "height": "500px",
          "margin": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-warning-box"
        name="warning-box"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "block",
            "height": "0px",
            "margin": 0,
            "overflow": "hidden",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "100%",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "verticalAlign": "top",
              "width": "60px",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "height": "60px",
                "left": 0,
                "margin": 0,
                "pointerEvents": "none",
                "position": "relative",
                "top": 0,
                "width": "60px",
              }
            }
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "left": "50%",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                }
              }
            >
              <svg
                height="25px"
                viewBox="0 0 100 100"
                width="25px"
              >
                <path
                  clipRule="evenodd"
                  d="M73.9,5.75c0.467-0.467,1.067-0.7,1.8-0.7c0.7,0,1.283,0.233,1.75,0.7l16.8,16.8  c0.467,0.5,0.7,1.084,0.7,1.75c0,0.733-0.233,1.334-0.7,1.801L70.35,50l23.9,23.95c0.5,0.467,0.75,1.066,0.75,1.8  c0,0.667-0.25,1.25-0.75,1.75l-16.8,16.75c-0.534,0.467-1.117,0.7-1.75,0.7s-1.233-0.233-1.8-0.7L50,70.351L26.1,94.25  c-0.567,0.467-1.167,0.7-1.8,0.7c-0.667,0-1.283-0.233-1.85-0.7L5.75,77.5C5.25,77,5,76.417,5,75.75c0-0.733,0.25-1.333,0.75-1.8  L29.65,50L5.75,26.101C5.25,25.667,5,25.066,5,24.3c0-0.666,0.25-1.25,0.75-1.75l16.8-16.8c0.467-0.467,1.05-0.7,1.75-0.7  c0.733,0,1.333,0.233,1.8,0.7L50,29.65L73.9,5.75z"
                  fill="red"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "position": "absolute",
              "verticalAlign": "top",
              "width": "calc(100% - 60px)",
            }
          }
        />
      </div>
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-body"
        name="body"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "flex",
            "fontFamily": "Roboto Mono, Monaco, monospace",
            "fontSize": "11px",
            "height": "100%",
            "margin": 0,
            "overflow": "none",
            "resize": "none",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "",
          }
        }
      >
        <span
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-labels"
          name="labels"
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "height": "100%",
              "margin": 0,
              "overflow": "hidden",
              "padding": "5px 0px 5px 10px",
              "verticalAlign": "top",
              "width": "44px",
            }
          }
        >
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-1"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-1"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            1
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-2"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-2"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            2
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-3"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-3"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            3
          </div>
          <div
            id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-4"
            key="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-line-4"
            style={
              Object {
                "color": "#D4D4D4",
              }
            }
          >
            4
          </div>
        </span>
        <span
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-0-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-0-rc-2\\" type=\\"symbol\\" value=\\"{\\" depth=\\"1\\" style=\\"color:#D4D4D4\\">{</span><br>&nbsp;&nbsp;<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-1-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-1-rc-2\\" type=\\"key\\" value=\\"hello\\" depth=\\"1\\" style=\\"color:#9CDCFE\\">hello</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-2-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-2-rc-2\\" type=\\"symbol\\" value=\\":\\" depth=\\"1\\" style=\\"color:#49B8F7\\">:</span> <span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-3-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-3-rc-2\\" type=\\"string\\" value=\\"'world'\\" depth=\\"1\\" style=\\"color:#E25E29\\">'world'</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-4-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-4-rc-2\\" type=\\"symbol\\" value=\\",\\" depth=\\"1\\" style=\\"color:#D4D4D4\\">,</span><br>&nbsp;&nbsp;<span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-5-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-5-rc-2\\" type=\\"key\\" value=\\"foo\\" depth=\\"1\\" style=\\"color:#9CDCFE\\">foo</span><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-6-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-6-rc-2\\" type=\\"symbol\\" value=\\":\\" depth=\\"1\\" style=\\"color:#49B8F7\\">:</span> <span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-7-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-7-rc-2\\" type=\\"string\\" value=\\"'bar'\\" depth=\\"1\\" style=\\"color:#E25E29\\">'bar'</span><br><span id=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-8-rc-2\\" key=\\"AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-token-8-rc-2\\" type=\\"symbol\\" value=\\"}\\" depth=\\"0\\" style=\\"color:#D4D4D4\\">}</span>",
            }
          }
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-content-box"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          onScroll={[Function]}
          spellCheck={false}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "flex": 1,
              "height": "100%",
              "margin": 0,
              "outline": "none",
              "overflowX": "hidden",
              "overflowY": "auto",
              "padding": "5px",
              "verticalAlign": "top",
              "whiteSpace": "pre-line",
              "width": "",
              "wordWrap": "break-word",
            }
          }
        />
      </div>
    </div>
  </div>
</JSONInput>
`;

exports[`Basic Component Render [DISTRIBUTION] 1`] = `
<JSONInput
  id="unique_string"
  locale={
    Object {
      "brace": Object {
        "curly": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '{}' curly braces",
          "missingClose": "Open '{' curly brace is missing closing '}' curly brace",
          "missingOpen": "Missing '{' open curly brace",
        },
        "square": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '[]' square braces",
          "missingClose": "Open '[' square brace is missing closing ']' square brace",
          "missingOpen": "Missing '[' open square brace",
        },
      },
      "format": "{reason} at line {line}",
      "invalidToken": Object {
        "double": "'{token}' token cannot be followed by another '{token}' token",
        "sequence": "'{firstToken}' token cannot be followed by a '{secondToken}' token",
        "unexpected": "Unexpected '{token}' token found",
        "useInstead": "'{badToken}' token is not accepted. Use '{goodToken}' instead",
        "whitelist": "'{firstToken}' token can only follow '{secondToken}' token",
      },
      "key": Object {
        "numberAndLetterMissingQuotes": "Key beginning with number and containing letters must be wrapped by quotes",
        "spaceMissingQuotes": "Key containing space must be wrapped by quotes",
        "unexpectedString": "Unexpected string found at key position",
      },
      "noTrailingOrLeadingComma": "Trailing or leading commas in arrays and objects are not permitted",
      "string": Object {
        "missingClose": "Missing/invalid closing string '{quote}' token",
        "missingOpen": "Missing/invalid opening string '{quote}' token",
        "mustBeWrappedByQuotes": "Strings must be wrapped by quotes",
        "nonAlphanumeric": "Non-alphanemeric token '{token}' is not allowed outside string notation",
        "unexpectedKey": "Unexpected key found at string position",
      },
    }
  }
  test={true}
>
  <div
    id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-outer-box"
    name="outer-box"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "height": "610px",
        "margin": 0,
        "overflow": "none",
        "position": "relative",
        "width": "479px",
      }
    }
  >
    <div
      style={
        Object {
          "height": "30px",
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": "translate(-25%,25%)",
          "transitionDuration": "0.2s",
          "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
          "width": "30px",
        }
      }
    >
      <svg
        height="30px"
        viewBox="0 0 100 100"
        width="30px"
      >
        <path
          clipRule="evenodd"
          d="M39.363,79L16,55.49l11.347-11.419L39.694,56.49L72.983,23L84,34.085L39.363,79z"
          fill="green"
          fillRule="evenodd"
          opacity="0.85"
        />
      </svg>
    </div>
    <div
      id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-container"
      name="container"
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "display": "block",
          "fontFamily": "Roboto, sans-serif",
          "height": "610px",
          "margin": 0,
          "overflow": "hidden",
          "width": "479px",
        }
      }
    >
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-warning-box"
        name="warning-box"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "block",
            "height": "0px",
            "margin": 0,
            "overflow": "hidden",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "100%",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "verticalAlign": "top",
              "width": "60px",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "height": "60px",
                "left": 0,
                "margin": 0,
                "pointerEvents": "none",
                "position": "relative",
                "top": 0,
                "width": "60px",
              }
            }
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "left": "50%",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                }
              }
            >
              <svg
                height="25px"
                viewBox="0 0 100 100"
                width="25px"
              >
                <path
                  clipRule="evenodd"
                  d="M73.9,5.75c0.467-0.467,1.067-0.7,1.8-0.7c0.7,0,1.283,0.233,1.75,0.7l16.8,16.8  c0.467,0.5,0.7,1.084,0.7,1.75c0,0.733-0.233,1.334-0.7,1.801L70.35,50l23.9,23.95c0.5,0.467,0.75,1.066,0.75,1.8  c0,0.667-0.25,1.25-0.75,1.75l-16.8,16.75c-0.534,0.467-1.117,0.7-1.75,0.7s-1.233-0.233-1.8-0.7L50,70.351L26.1,94.25  c-0.567,0.467-1.167,0.7-1.8,0.7c-0.667,0-1.283-0.233-1.85-0.7L5.75,77.5C5.25,77,5,76.417,5,75.75c0-0.733,0.25-1.333,0.75-1.8  L29.65,50L5.75,26.101C5.25,25.667,5,25.066,5,24.3c0-0.666,0.25-1.25,0.75-1.75l16.8-16.8c0.467-0.467,1.05-0.7,1.75-0.7  c0.733,0,1.333,0.233,1.8,0.7L50,29.65L73.9,5.75z"
                  fill="red"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "position": "absolute",
              "verticalAlign": "top",
              "width": "calc(100% - 60px)",
            }
          }
        />
      </div>
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-body"
        name="body"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "flex",
            "fontFamily": "Roboto Mono, Monaco, monospace",
            "fontSize": "11px",
            "height": "100%",
            "margin": 0,
            "overflow": "none",
            "resize": "none",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "",
          }
        }
      >
        <span
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-labels"
          name="labels"
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "height": "100%",
              "margin": 0,
              "overflow": "hidden",
              "padding": "5px 0px 5px 10px",
              "verticalAlign": "top",
              "width": "44px",
            }
          }
        />
        <span
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-content-box"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          onScroll={[Function]}
          spellCheck={false}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "flex": 1,
              "height": "100%",
              "margin": 0,
              "outline": "none",
              "overflowX": "hidden",
              "overflowY": "auto",
              "padding": "5px",
              "verticalAlign": "top",
              "whiteSpace": "pre-line",
              "width": "",
              "wordWrap": "break-word",
            }
          }
        />
      </div>
    </div>
  </div>
</JSONInput>
`;

exports[`Basic Component Render [SOURCE] 1`] = `
<JSONInput
  id="unique_string"
  locale={
    Object {
      "brace": Object {
        "curly": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '{}' curly braces",
          "missingClose": "Open '{' curly brace is missing closing '}' curly brace",
          "missingOpen": "Missing '{' open curly brace",
        },
        "square": Object {
          "cannotWrap": "'{token}' token cannot be wrapped in '[]' square braces",
          "missingClose": "Open '[' square brace is missing closing ']' square brace",
          "missingOpen": "Missing '[' open square brace",
        },
      },
      "format": "{reason} at line {line}",
      "invalidToken": Object {
        "double": "'{token}' token cannot be followed by another '{token}' token",
        "sequence": "'{firstToken}' token cannot be followed by a '{secondToken}' token",
        "unexpected": "Unexpected '{token}' token found",
        "useInstead": "'{badToken}' token is not accepted. Use '{goodToken}' instead",
        "whitelist": "'{firstToken}' token can only follow '{secondToken}' token",
      },
      "key": Object {
        "numberAndLetterMissingQuotes": "Key beginning with number and containing letters must be wrapped by quotes",
        "spaceMissingQuotes": "Key containing space must be wrapped by quotes",
        "unexpectedString": "Unexpected string found at key position",
      },
      "noTrailingOrLeadingComma": "Trailing or leading commas in arrays and objects are not permitted",
      "string": Object {
        "missingClose": "Missing/invalid closing string '{quote}' token",
        "missingOpen": "Missing/invalid opening string '{quote}' token",
        "mustBeWrappedByQuotes": "Strings must be wrapped by quotes",
        "nonAlphanumeric": "Non-alphanemeric token '{token}' is not allowed outside string notation",
        "unexpectedKey": "Unexpected key found at string position",
      },
    }
  }
  test={true}
>
  <div
    id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-outer-box"
    name="outer-box"
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "height": "610px",
        "margin": 0,
        "overflow": "none",
        "position": "relative",
        "width": "479px",
      }
    }
  >
    <div
      style={
        Object {
          "height": "30px",
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": "translate(-25%,25%)",
          "transitionDuration": "0.2s",
          "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
          "width": "30px",
        }
      }
    >
      <svg
        height="30px"
        viewBox="0 0 100 100"
        width="30px"
      >
        <path
          clipRule="evenodd"
          d="M39.363,79L16,55.49l11.347-11.419L39.694,56.49L72.983,23L84,34.085L39.363,79z"
          fill="green"
          fillRule="evenodd"
          opacity="0.85"
        />
      </svg>
    </div>
    <div
      id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-container"
      name="container"
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "display": "block",
          "fontFamily": "Roboto, sans-serif",
          "height": "610px",
          "margin": 0,
          "overflow": "hidden",
          "width": "479px",
        }
      }
    >
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-warning-box"
        name="warning-box"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "block",
            "height": "0px",
            "margin": 0,
            "overflow": "hidden",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "100%",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "verticalAlign": "top",
              "width": "60px",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "height": "60px",
                "left": 0,
                "margin": 0,
                "pointerEvents": "none",
                "position": "relative",
                "top": 0,
                "width": "60px",
              }
            }
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "left": "50%",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                }
              }
            >
              <svg
                height="25px"
                viewBox="0 0 100 100"
                width="25px"
              >
                <path
                  clipRule="evenodd"
                  d="M73.9,5.75c0.467-0.467,1.067-0.7,1.8-0.7c0.7,0,1.283,0.233,1.75,0.7l16.8,16.8  c0.467,0.5,0.7,1.084,0.7,1.75c0,0.733-0.233,1.334-0.7,1.801L70.35,50l23.9,23.95c0.5,0.467,0.75,1.066,0.75,1.8  c0,0.667-0.25,1.25-0.75,1.75l-16.8,16.75c-0.534,0.467-1.117,0.7-1.75,0.7s-1.233-0.233-1.8-0.7L50,70.351L26.1,94.25  c-0.567,0.467-1.167,0.7-1.8,0.7c-0.667,0-1.283-0.233-1.85-0.7L5.75,77.5C5.25,77,5,76.417,5,75.75c0-0.733,0.25-1.333,0.75-1.8  L29.65,50L5.75,26.101C5.25,25.667,5,25.066,5,24.3c0-0.666,0.25-1.25,0.75-1.75l16.8-16.8c0.467-0.467,1.05-0.7,1.75-0.7  c0.733,0,1.333,0.233,1.8,0.7L50,29.65L73.9,5.75z"
                  fill="red"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "display": "inline-block",
              "height": "60px",
              "margin": 0,
              "overflow": "hidden",
              "pointerEvents": "none",
              "position": "absolute",
              "verticalAlign": "top",
              "width": "calc(100% - 60px)",
            }
          }
        />
      </div>
      <div
        id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-body"
        name="body"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#1E1E1E",
            "display": "flex",
            "fontFamily": "Roboto Mono, Monaco, monospace",
            "fontSize": "11px",
            "height": "100%",
            "margin": 0,
            "overflow": "none",
            "resize": "none",
            "transitionDuration": "0.2s",
            "transitionTimingFunction": "cubic-bezier(0, 1, 0.5, 1)",
            "width": "",
          }
        }
      >
        <span
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-labels"
          name="labels"
          onClick={[Function]}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "height": "100%",
              "margin": 0,
              "overflow": "hidden",
              "padding": "5px 0px 5px 10px",
              "verticalAlign": "top",
              "width": "44px",
            }
          }
        />
        <span
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          id="AJRM-JSON-EDITOR-<RANDOM_NUMBER>-unique_string-content-box"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          onScroll={[Function]}
          spellCheck={false}
          style={
            Object {
              "boxSizing": "border-box",
              "color": "#D4D4D4",
              "display": "inline-block",
              "flex": 1,
              "height": "100%",
              "margin": 0,
              "outline": "none",
              "overflowX": "hidden",
              "overflowY": "auto",
              "padding": "5px",
              "verticalAlign": "top",
              "whiteSpace": "pre-line",
              "width": "",
              "wordWrap": "break-word",
            }
          }
        />
      </div>
    </div>
  </div>
</JSONInput>
`;
